    /**
     * (C) 2008-2012, Trapeze Switzerland GmbH. All rights reserved.
     *
     * Original model object: mhcc.app.dataprovider.model.tdiinterface.dstructs.vehicle_tdi
     *
     * Automatically generated. DO NOT CHANGE THIS FILE MANUALLY!
     *
     */

    syntax = "proto2";
    package mhcc.app.dataprovider.model.tdiinterface.dstructs;
    option java_outer_classname = "VehicleTdiArrayDTO";

    import "VehicleTdi.proto";

    message VehicleTdiArray {
        repeated VehicleTdi vehicleTdiArray = 1;
    }
  